infra/cilium/networkpolicies/hubble-relay.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: cilium
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9966"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s-app: hubble-ui
            "k8s:io.kubernetes.pod.namespace": cilium
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
